--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -13,3 +13,4 @@ install(DIRECTORY associate DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 install(DIRECTORY edic DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 install(DIRECTORY stroke DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 install(DIRECTORY wubi DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(DIRECTORY hwr DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
