--- a/extern/lib/CMakeLists.txt
+++ b/extern/lib/CMakeLists.txt
@@ -9,10 +9,8 @@ project(lib)
 
 # 5. Project Install
 if(MSVC)
-	file(GLOB INSTALL_LIBS_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/win32/debug/*.dll CONFIGURATIONS debug)
-	file(GLOB INSTALL_LIBS_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/win32/release/*.dll CONFIGURATIONS release)
-	install(FILES ${INSTALL_LIBS_DEBUG} DESTINATION ${CMAKE_INSTALL_LIBDIR}/debug CONFIGURATIONS debug)
-	install(FILES ${INSTALL_LIBS_RELEASE} DESTINATION ${CMAKE_INSTALL_LIBDIR}/release CONFIGURATIONS release)
+	file(GLOB LIBS ${CMAKE_CURRENT_SOURCE_DIR}/win32/*.dll)
+	install(FILES ${LIBS} DESTINATION ${CMAKE_INSTALL_LIBDIR})
 elseif(UNIX AND NOT ANDROID)
 	file(GLOB LIBS linux-arm/release/*.so*)
 	install(FILES ${LIBS} DESTINATION ${CMAKE_INSTALL_LIBDIR})
