add working_directory for cmake

--- a/examples/test-hwr/CMakeLists.txt
+++ b/examples/test-hwr/CMakeLists.txt
@@ -25,6 +25,7 @@ file(GLOB SRC_FILES "*.h" "*.cpp" "../test-share/*.h" "../test-share/*.cpp")
 add_executable(${BIN_NAME} ${SRC_FILES})
 set_target_properties(${BIN_NAME} PROPERTIES OUTPUT_NAME ime.${BIN_NAME})
 target_link_libraries(${BIN_NAME} hwr)
+set_target_properties(${PROJECT_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "../../../dist/lib")
 
 # 4. Project Install
 install(TARGETS ${BIN_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
